--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -37,39 +37,40 @@
 	</header>
 
 	<main class="contenedor">
-	<div class="content--sucursales">
-	<div class="sucursales__titulo">¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
-	<div class="video">
-		<iframe width="90%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
-			title="YouTube video player" frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen></iframe>
-	</div>
-		<div class="box--sucursales">
-			<div class="caja">
-				<i class="fas fa-award"></i>
-				<h4>CAPACITACIONES</h4>
+		<div class="content--sucursales">
+			<div class="sucursales__titulo">¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
+				<div class="video">
+					<iframe width="90%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+				</div>
+			<div class="box--sucursales">
+				<div class="caja">
+					<i class="fas fa-award"></i>
+					<h4>CAPACITACIONES</h4>
+				</div>
+				<div class="caja">
+					<i class="fas fa-piggy-bank"></i>
+					<h4>RAPIDO RETORNO</h4>
+				</div>
+				<div class="caja">
+					<i class="far fa-check-square"></i>
+					<h4>MANUALES DE OPERATORIA</h4>
+				</div>
+				<div class="caja">
+					<i class="fas fa-wifi"></i>
+					<h4>PUBLICIDAD COMERCIAL</h4>
+				</div>
+				<div class="caja">
+					<i class="fas fa-globe"></i>
+					<h4>ASESORAMIENTO TOTAL</h4>
+				</div>
 			</div>
-			<div class="caja">
-				<i class="fas fa-piggy-bank"></i>
-				<h4>RAPIDO RETORNO</h4>
-			</div>
-			<div class="caja">
-				<i class="far fa-check-square"></i>
-				<h4>MANUALES DE OPERATORIA</h4>>
-			</div>
-			<div class="caja">
-				<i class="fas fa-wifi"></i>
-				<h4>PUBLICIDAD COMERCIAL</h4>
-			</div>
-			<div class="caja">
-				<i class="fas fa-globe"></i>
-				<h4>ASESORAMIENTO TOTAL</h4>
-			</div>
+		
 		</div>
-	</div>
 
-	<article class="redes--uno">
+	<!-- <article class="redes--uno">
 		<h4>Sumate a nuestras redes sociales!</h4>
 		<p>Podes dejar tus comentarios, compartir tu experiencia en el uso de nuestros productos.
 			Ayudanos a mejorar con tu participación!</p>
@@ -78,7 +79,7 @@
 		<a href="#"><i class="fab fa-facebook-square"></i></a>
 		<a href="#"><i class="fab fa-instagram"></i></a>
 		<a href="#"><i class="fab fa-youtube"></i></a>
-	</article>
+	</article> -->
 	<section class="section">
 		<div class="accordion">
 			<div class="form__titulo">FRANQUICIADOS</div>
