--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -70,7 +70,7 @@
 		
 		</div>
 
-	<!-- <article class="redes--uno">
+	<article class="redes--uno">
 		<h4>Sumate a nuestras redes sociales!</h4>
 		<p>Podes dejar tus comentarios, compartir tu experiencia en el uso de nuestros productos.
 			Ayudanos a mejorar con tu participación!</p>
@@ -79,7 +79,7 @@
 		<a href="#"><i class="fab fa-facebook-square"></i></a>
 		<a href="#"><i class="fab fa-instagram"></i></a>
 		<a href="#"><i class="fab fa-youtube"></i></a>
-	</article> -->
+	</article>
 	<section class="section">
 		<div class="accordion">
 			<div class="form__titulo">FRANQUICIADOS</div>
@@ -105,7 +105,7 @@
 			</div>
 			<div class="accordion__item">
 				<div class="accordion__item__header">
-				DÓMESTICO FLORENCIO VARELA
+				DOMÉSTICO FLORENCIO VARELA
 				</div>
 				<div class="accordion__item__body">
 					<div class="accordion__item__body__content">
@@ -117,7 +117,7 @@
 			</div>
 			<div class="accordion__item">
 				<div class="accordion__item__header">
-					DÓMESTICO LANÚS
+					DOMÉSTICO LANÚS
 				</div>
 				<div class="accordion__item__body">
 					<div class="accordion__item__body__content">
@@ -127,7 +127,7 @@
 			</div>
 			<div class="accordion__item">
 				<div class="accordion__item__header">
-					DÓMESTICO ROSARIO
+					DOMÉSTICO ROSARIO
 				</div>
 				<div class="accordion__item__body">
 					<div class="accordion__item__body__content">
@@ -137,31 +137,7 @@
 			</div>
 		</div>
 	</section>
-	<article class="article">
-		<div class="form__titulo">¿Por qué ser parte de Doméstico?</div><br>
-		<div class="box__video">
-			<i class="fas fa-award"></i>
-			<h4>Calidad</h4>
-			<p>Todos nuestros productos son fabricados bajo los más altos estándares de calidad.</p>
-		</div>
-		<div class="box__video">
-			<i class="fas fa-piggy-bank"></i>
-			<h4>Economía</h4>
-			<p>Comprando en Doméstico, obtendrás un ahorro superior del 60%, bien sea como inversión, institución o
-				para tu hogar.</p>
-		</div>
-		<div class="box__video">
-			<i class="far fa-check-square"></i>
-			<h4>Experiencia</h4>
-			<p>Más de 20 años de experiencia en la fabricación de insumos para limpieza e higiene.</h6>
-		</div>
-		<div class="box__video">
-			<i class="fas fa-globe"></i>
-			<h4>Negocio Esencial</h4>
-			<p>Negocio de primera necesidad, nunca se detiene.</p>
-		</div>
-		
-	</article>
+
 	
 	<section class="contacto">
 		<div id="contacto-form">
