--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -40,7 +40,7 @@
 		<div class="content--sucursales">
 			<div class="sucursales__titulo">¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
 				<div class="video">
-					<iframe width="90%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
+					<iframe width="100%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
 					title="YouTube video player" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
@@ -66,20 +66,15 @@
 					<i class="fas fa-globe"></i>
 					<h4>ASESORAMIENTO TOTAL</h4>
 				</div>
+				<div class="caja">
+					<i class="fas fa-globe"></i>
+					<h4>NEGOCIO RENTABLE</h4>
+				</div>
 			</div>
 		
 		</div>
 
-	<article class="redes--uno">
-		<h4>Sumate a nuestras redes sociales!</h4>
-		<p>Podes dejar tus comentarios, compartir tu experiencia en el uso de nuestros productos.
-			Ayudanos a mejorar con tu participación!</p>
-	</article>
-	<article class="redes--dos">
-		<a href="#"><i class="fab fa-facebook-square"></i></a>
-		<a href="#"><i class="fab fa-instagram"></i></a>
-		<a href="#"><i class="fab fa-youtube"></i></a>
-	</article>
+	
 	<section class="section">
 		<div class="accordion">
 			<div class="form__titulo">FRANQUICIADOS</div>
