--- a/html/productos.html
+++ b/html/productos.html
@@ -6,19 +6,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nuestros Productos - Doméstico</title>
-	<meta name="description" content="Fabricante de productos de limpieza. Desde hace más de 18 años generando soluciones en limpieza integral.">
+	<meta name="description"
+		content="Fabricante de productos de limpieza. Desde hace más de 18 años generando soluciones en limpieza integral.">
 	<meta name="keywords" content="quimica, detergente, suavizante, alcohol, fabrica de productos de limpieza">
 	<link rel="shortcut icon" href="../img/favicon.ico" />
 	<link rel="stylesheet" href="../scss/estilos.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </head>
 
 <body>
 
-	<header class="header">
+	<header class="header" data-spy="affix" data-offset-top="197">
 
 		<nav class="menu">
 			<a href="../index.html"> <img class="logo" src="../img/logo.png"> </a>
@@ -26,8 +31,8 @@
 				<i class="fas fa-bars"></i>
 			</button>
 			<ul class="navMenu desaparece">
-				<li><a href="../index.html" >Doméstico</a></li>
-				<li><a href="productos.html"class="current">Productos</a></li>
+				<li><a href="../index.html">Doméstico</a></li>
+				<li><a href="productos.html" class="current">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="sucursales.html">Sucursales</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
@@ -50,7 +55,7 @@
 			<a href="#"><i class="fab fa-youtube"></i></a>
 		</article>
 		<section class="section">
-			
+
 			<div class="accordion">
 				<div class="form__titulo">Conoce nuestros productos</div>
 				<div class="accordion__item">
@@ -59,7 +64,7 @@
 					</div>
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
-						--
+							--
 						</div>
 					</div>
 				</div>
@@ -69,7 +74,7 @@
 					</div>
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
-						--
+							--
 						</div>
 					</div>
 				</div>
@@ -161,12 +166,12 @@
 			</div>
 			<div class="contacto--mapa">
 				<div class="form__titulo">Contacto y Ubicación</div>
-				
+
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
 					width="98%" height="25%" allowfullscreen="2" loading="lazy">
 				</iframe>
-				
+
 				<div class="box__mapa">
 					<i class="far fa-envelope"></i>
 					<h4>Mail</h4>
@@ -183,7 +188,7 @@
 					<i class="far fa-clock"></i>
 					<h4>Horario</h4>
 					<p>Lunes a Viernes<br>
-						8.30 a 13.00 hs. y 14.30  a 19.30 hs.
+						8.30 a 13.00 hs. y 14.30 a 19.30 hs.
 						Sabados 8.30 a 18.00 hs.</p>
 				</div>
 				<div class="box__mapa">
@@ -194,31 +199,31 @@
 			</div>
 		</section>
 	</main>
-		<footer class="footer">
-			<!--Inicio footer-->
-			<div id="promo">
-				<div class="promo__img">
-					<img src="../img/logo.jpg" />
-				</div>
-				<div class="promo__text">
-					<p>Doméstico, es un negocio de venta de productos de limpieza sueltos de uso domestico e industrial,
-						que se
-						destaca por su variedad, calidad y precios bajos.</p>
-				</div>
-				<div class="promo__redes">
-					<a href="#"><i class="fab fa-facebook-square"></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></a>
-					<a href="#"><i class="fab fa-youtube"></i></a>
-				</div>
-				<div class="promo__contacto">
-					<h2>CONVERSA CON UN ASESOR!</h2>
-					<a href="#"><i class="fab fa-whatsapp"></i></a>
-				</div>
+	<footer class="footer">
+		<!--Inicio footer-->
+		<div id="promo">
+			<div class="promo__img">
+				<img src="../img/logo.jpg" />
 			</div>
-			<div class="footer1">
-				<p>&copy; Doméstico Central | 2021</p>
+			<div class="promo__text">
+				<p>Doméstico, es un negocio de venta de productos de limpieza sueltos de uso domestico e industrial,
+					que se
+					destaca por su variedad, calidad y precios bajos.</p>
 			</div>
-		</footer>
+			<div class="promo__redes">
+				<a href="#"><i class="fab fa-facebook-square"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+			</div>
+			<div class="promo__contacto">
+				<h2>CONVERSA CON UN ASESOR!</h2>
+				<a href="#"><i class="fab fa-whatsapp"></i></a>
+			</div>
+		</div>
+		<div class="footer1">
+			<p>&copy; Doméstico Central | 2021</p>
+		</div>
+	</footer>
 
 
 	<script>
@@ -240,8 +245,7 @@
 				const accordionItemBody = accordionItemHeader.nextElementSibling;
 				if (accordionItemHeader.classList.contains("active")) {
 					accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
-				}
-				else {
+				} else {
 					accordionItemBody.style.maxHeight = 0;
 				}
 
