--- a/html/servicios.html
+++ b/html/servicios.html
@@ -11,12 +11,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </head>
 
 <body>
 
-	<header class="header">
+	<header class="header" data-spy="affix" data-offset-top="197">
 
 		<nav class="menu">
 			<a href="../index.html"> <img class="logo" src="../img/logo.png"> </a>
@@ -36,168 +40,181 @@
 
 	<main class="contenedor">
 
-	</section>
-	<article class="redes--uno">
-		<h4>Sumate a nuestras redes sociales!</h4>
-		<p>Podes dejar tus comentarios, compartir tu experiencia en el uso de nuestros productos.
-			Ayudanos a mejorar con tu participación!</p>
-	</article>
-	<article class="redes--dos">
-		<a href="#"><i class="fab fa-facebook-square"></i></a>
-		<a href="#"><i class="fab fa-instagram"></i></a>
-		<a href="#"><i class="fab fa-youtube"></i></a>
-	</article>
-	<section class="section">
-		
-		<div class="accordion">
-			<div class="form__titulo">¿como trabajamos?</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					TRAZABILIDAD DE LOTES
+		</section>
+		<article class="redes--uno">
+			<h4>Sumate a nuestras redes sociales!</h4>
+			<p>Podes dejar tus comentarios, compartir tu experiencia en el uso de nuestros productos.
+				Ayudanos a mejorar con tu participación!</p>
+		</article>
+		<article class="redes--dos">
+			<a href="#"><i class="fab fa-facebook-square"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+			<a href="#"><i class="fab fa-youtube"></i></a>
+		</article>
+		<section class="section">
+
+			<div class="accordion">
+				<div class="form__titulo">¿como trabajamos?</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						TRAZABILIDAD DE LOTES
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							Este proceso garantiza la calidad y seguridad de los productos, asegurando la viabilidad del
+							sistema en su integridad, controlando en tiempo real las transacciones, verificando el
+							origen de los mismos, y registrando la historia de localizaciones y traslados a lo largo de
+							toda la cadena de distribución y de provisión.
+						</div>
+					</div>
 				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						Este proceso garantiza la calidad y seguridad de los productos, asegurando la viabilidad del sistema en su integridad, controlando en tiempo real las transacciones, verificando el origen de los mismos, y registrando la historia de localizaciones y traslados a lo largo de toda la cadena de distribución y de provisión.
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						ENVIOS A DOMICILIO SIN CARGO
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							Realizamos entregas de nuestros productos de lunes a sábados. Por consultas sobre este
+							servicio, el radio operativo y tiempo de entrega, no dude en comunicarse con nosotros, un
+							asesor está a su disposición.
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						ENVASADO CON ESPECIFICACIONES SOLICITADAS
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							Contamos con la estructura suficiente para envasar nuestros productos en distintas medidas,
+							a pedido de cada cliente que lo solicite.
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DESARROLLO Y FABRICACIÓN DE PRODUCTOS A PEDIDO PARA TERCEROS
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							Según las necesidades de cada caso, desarrollamos productos a pedido. Si necesitara algún
+							producto que no encuentra en nuestras listas, no dude en consultarnos, ya que podemos
+							formularlo según lo solicitado.
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						¿ERES DEL INTERIOR?
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							<ul style="padding-left: 1rem;">
+								<p>La empresa cuenta con vehículos propios para llevar sus productos a distintos puntos
+									tanto de la provincia de Buenos Aires, así cómo también a los expresos.</p><br>
+								<li> ¿Cómo puedo realizar el pedido?</li>
+								<p> El pedido lo puede realizar por teléfono, vía mail (info@domestico.com.ar), Whatsapp
+									(+54 1164471234)<p><br>
+										<li> ¿Cuál es el mínimo de compra? ¿Cuáles son las formas de pago? </li>
+										<p> El mínimo de compra varía según la zona (consultanos el monto). Para los
+											pagos, transferencia o depósito bancario.</p><br>
+										<li> ¿Cuál es la demora para la entrega?</li>
+										<p> Una vez confirmado el pago, tenemos una demora de 72 a 96 horas hábiles para
+											el despacho hacía el expreso de su conveniencia. (tener en consideración la
+											demora que pueden tener los expresos)</p>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					ENVIOS A DOMICILIO SIN CARGO	
+		</section>
+		<article class="article">
+			<div class="form__titulo">¿Por qué ser parte de Doméstico?</div><br>
+			<div class="box__video">
+				<i class="fas fa-award"></i>
+				<h4>Calidad</h4>
+				<p>Todos nuestros productos son fabricados bajo los más altos estándares de calidad.</p>
+			</div>
+			<div class="box__video">
+				<i class="fas fa-piggy-bank"></i>
+				<h4>Economía</h4>
+				<p>Comprando en Doméstico, obtendrás un ahorro superior del 60%, bien sea como inversión, institución o
+					para tu hogar.</p>
+			</div>
+			<div class="box__video">
+				<i class="far fa-check-square"></i>
+				<h4>Experiencia</h4>
+				<p>Más de 20 años de experiencia en la fabricación de insumos para limpieza e higiene.</h6>
+			</div>
+			<div class="box__video">
+				<i class="fas fa-globe"></i>
+				<h4>Negocio Esencial</h4>
+				<p>Negocio de primera necesidad, nunca se detiene.</p>
+			</div>
+		</article>
+		<article class="article2">
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqeYv7RITII"
+				title="YouTube video player" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</article>
+		<section class="contacto">
+			<div id="contacto-form">
+				<form class="form">
+					<div class="form__titulo">Formulario de contacto</div>
+					<input class="form__input" placeholder="Nombre y apellido" name="nombre" type="text">
+					<input class="form__input" placeholder="Dirección" name="direccion" type="text">
+					<input class="form__input" placeholder="Localidad" name="localidad" type="text">
+					<input class="form__input" placeholder="Provincia" name="provincia" type="text">
+					<input class="form__input" placeholder="Teléfono" name="telefono" type="number">
+					<input class="form__input" placeholder="Email" name="email" type="email"><br>
+					<label for="motivodeconsulta">Motivo de consulta</label>
+					<select class="form__select" name="motivodeconsulta" id="consulta">
+						<option value="Revendedor">Quiero ser Revendedor</option>
+						<option value="franquicia">Quiero ser franquiciado</option>
+						<option value="otra">Otra consulta</option>
+					</select>
+					<textarea class="form__input" placeholder="Consulta, comentario y/o sugerencia" name="comentario"
+						id=""></textarea>
+					<input class="bottom" type="reset" id="" value="BORRAR" />
+					<input class="bottom" type="submit" id="" value="ENVIAR" />
+				</form>
+			</div>
+			<div class="contacto--mapa">
+				<div class="form__titulo">Contacto y Ubicación</div>
+
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
+					width="98%" height="25%" allowfullscreen="2" loading="lazy">
+				</iframe>
+
+				<div class="box__mapa">
+					<i class="far fa-envelope"></i>
+					<h4>Mail</h4>
+					<p>Info@domestico.com.ar</p>
 				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						Realizamos entregas de nuestros productos de lunes a sábados. Por consultas sobre este servicio, el radio operativo y tiempo de entrega, no dude en comunicarse con nosotros, un asesor está a su disposición.
-					</div>
+				<div class="box__mapa">
+					<i class="fas fa-thumbtack"></i>
+					<h4>Dirección</h4>
+					<p>Av. Victorica 280
+						Moreno . Prov. de Buenos Aires
+						Argentina . CP 1744</p>
+				</div>
+				<div class="box__mapa">
+					<i class="far fa-clock"></i>
+					<h4>Horario</h4>
+					<p>Lunes a Viernes<br>
+						8.30 a 13.00 hs. y 14.30 a 19.30 hs.
+						Sabados 8.30 a 18.00 hs.</p>
+				</div>
+				<div class="box__mapa">
+					<i class="fas fa-phone"></i>
+					<h4>0237 4605778</h4>
+					<p>0237 4625721 . 011 22231625 <br> WhatsApp 011 64471234 </p>
 				</div>
 			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					ENVASADO CON ESPECIFICACIONES SOLICITADAS
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						Contamos con la estructura suficiente para envasar nuestros productos en distintas medidas, a pedido de cada cliente que lo solicite.
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					DESARROLLO Y FABRICACIÓN DE PRODUCTOS A PEDIDO PARA TERCEROS
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						Según las necesidades de cada caso, desarrollamos productos a pedido. Si necesitara algún producto que no encuentra en nuestras listas, no dude en consultarnos, ya que podemos formularlo según lo solicitado.
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					¿ERES DEL INTERIOR?
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						<ul style="padding-left: 1rem;">
-							<p>La empresa cuenta con vehículos propios para llevar sus productos a distintos puntos tanto de la provincia de Buenos Aires, así cómo también a los expresos.</p><br>
-							<li> ¿Cómo puedo realizar el pedido?</li>
-							<p> El pedido lo puede realizar por teléfono, vía mail (info@domestico.com.ar), Whatsapp (+54 1164471234)<p><br>
-							<li> ¿Cuál es el mínimo de compra? ¿Cuáles son las formas de pago? </li>
-							<p> El mínimo de compra varía según la zona (consultanos el monto). Para los pagos, transferencia o depósito bancario.</p><br>
-							<li> ¿Cuál es la demora para la entrega?</li>
-							<p> Una vez confirmado el pago, tenemos una demora de 72 a 96 horas hábiles para el despacho hacía el expreso de su conveniencia. (tener en consideración la demora que pueden tener los expresos)</p>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<article class="article">
-		<div class="form__titulo">¿Por qué ser parte de Doméstico?</div><br>
-		<div class="box__video">
-			<i class="fas fa-award"></i>
-			<h4>Calidad</h4>
-			<p>Todos nuestros productos son fabricados bajo los más altos estándares de calidad.</p>
-		</div>
-		<div class="box__video">
-			<i class="fas fa-piggy-bank"></i>
-			<h4>Economía</h4>
-			<p>Comprando en Doméstico, obtendrás un ahorro superior del 60%, bien sea como inversión, institución o
-				para tu hogar.</p>
-		</div>
-		<div class="box__video">
-			<i class="far fa-check-square"></i>
-			<h4>Experiencia</h4>
-			<p>Más de 20 años de experiencia en la fabricación de insumos para limpieza e higiene.</h6>
-		</div>
-		<div class="box__video">
-			<i class="fas fa-globe"></i>
-			<h4>Negocio Esencial</h4>
-			<p>Negocio de primera necesidad, nunca se detiene.</p>
-		</div>
-	</article>
-	<article class="article2">
-		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqeYv7RITII"
-			title="YouTube video player" frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen></iframe>
-	</article>
-	<section class="contacto">
-		<div id="contacto-form">
-			<form class="form">
-				<div class="form__titulo">Formulario de contacto</div>
-				<input class="form__input" placeholder="Nombre y apellido" name="nombre" type="text">
-				<input class="form__input" placeholder="Dirección" name="direccion" type="text">
-				<input class="form__input" placeholder="Localidad" name="localidad" type="text">
-				<input class="form__input" placeholder="Provincia" name="provincia" type="text">
-				<input class="form__input" placeholder="Teléfono" name="telefono" type="number">
-				<input class="form__input" placeholder="Email" name="email" type="email"><br>
-				<label for="motivodeconsulta">Motivo de consulta</label>
-				<select class="form__select" name="motivodeconsulta" id="consulta">
-					<option value="Revendedor">Quiero ser Revendedor</option>
-					<option value="franquicia">Quiero ser franquiciado</option>
-					<option value="otra">Otra consulta</option>
-				</select>
-				<textarea class="form__input" placeholder="Consulta, comentario y/o sugerencia" name="comentario"
-					id=""></textarea>
-				<input class="bottom" type="reset" id="" value="BORRAR" />
-				<input class="bottom" type="submit" id="" value="ENVIAR" />
-			</form>
-		</div>
-		<div class="contacto--mapa">
-			<div class="form__titulo">Contacto y Ubicación</div>
-			
-			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
-				width="98%" height="25%" allowfullscreen="2" loading="lazy">
-			</iframe>
-			
-			<div class="box__mapa">
-				<i class="far fa-envelope"></i>
-				<h4>Mail</h4>
-				<p>Info@domestico.com.ar</p>
-			</div>
-			<div class="box__mapa">
-				<i class="fas fa-thumbtack"></i>
-				<h4>Dirección</h4>
-				<p>Av. Victorica 280
-					Moreno . Prov. de Buenos Aires
-					Argentina . CP 1744</p>
-			</div>
-			<div class="box__mapa">
-				<i class="far fa-clock"></i>
-				<h4>Horario</h4>
-				<p>Lunes a Viernes<br>
-					8.30 a 13.00 hs. y 14.30  a 19.30 hs.
-					Sabados 8.30 a 18.00 hs.</p>
-			</div>
-			<div class="box__mapa">
-				<i class="fas fa-phone"></i>
-				<h4>0237 4605778</h4>
-				<p>0237 4625721 . 011 22231625 <br> WhatsApp 011 64471234 </p>
-			</div>
-		</div>
-	</section>
-</main>
+		</section>
+	</main>
 	<footer class="footer">
 		<!--Inicio footer-->
 		<div id="promo">
@@ -225,33 +242,32 @@
 	</footer>
 
 
-<script>
-	function accion() {
-		console.log("está funcionando mi boton");
-		var ancla = document.getElementsByClassName("navMenu")
-		for (var i = 0; i < ancla.length; i++) {
-			ancla[i].classList.toggle("desaparece");
+	<script>
+		function accion() {
+			console.log("está funcionando mi boton");
+			var ancla = document.getElementsByClassName("navMenu")
+			for (var i = 0; i < ancla.length; i++) {
+				ancla[i].classList.toggle("desaparece");
+			}
 		}
-	}
-</script>
-<script>
-	const accordionItemHeaders = document.querySelectorAll(".accordion__item__header");
+	</script>
+	<script>
+		const accordionItemHeaders = document.querySelectorAll(".accordion__item__header");
 
-	accordionItemHeaders.forEach(accordionItemHeader => {
-		accordionItemHeader.addEventListener("click", event => {
+		accordionItemHeaders.forEach(accordionItemHeader => {
+			accordionItemHeader.addEventListener("click", event => {
 
-			accordionItemHeader.classList.toggle("active");
-			const accordionItemBody = accordionItemHeader.nextElementSibling;
-			if (accordionItemHeader.classList.contains("active")) {
-				accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
-			}
-			else {
-				accordionItemBody.style.maxHeight = 0;
-			}
+				accordionItemHeader.classList.toggle("active");
+				const accordionItemBody = accordionItemHeader.nextElementSibling;
+				if (accordionItemHeader.classList.contains("active")) {
+					accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
+				} else {
+					accordionItemBody.style.maxHeight = 0;
+				}
 
+			});
 		});
-	});
-</script>
+	</script>
 
 
 
