--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -13,12 +13,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
 
-	<header class="header">
+	<header class="header" data-spy="affix" data-offset-top="197">
 
 		<nav class="menu">
 			<a href="../index.html"> <img class="logo" src="../img/logo.png"> </a>
@@ -26,10 +29,10 @@
 				<i class="fas fa-bars"></i>
 			</button>
 			<ul class="navMenu desaparece">
-				<li><a href="../index.html" >Doméstico</a></li>
+				<li><a href="../index.html">Doméstico</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
-				<li><a href="sucursales.html"class="current">Sucursales</a></li>
+				<li><a href="sucursales.html" class="current">Sucursales</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
@@ -38,13 +41,19 @@
 
 	<main class="contenedor">
 		<div class="content--sucursales">
-			<div class="sucursales__titulo">¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
-				<div class="video">
-					<iframe width="100%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
+			
+			
+			<div class="sucursales__titulo"><svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				<circle id="Oval" cx="512" cy="512" r="512"></circle>
+				<circle id="Oval" cx="512" cy="512" r="512"></circle>
+				<circle id="Oval" cx="512" cy="512" r="512"></circle>
+		</svg>¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
+			<div class="video">
+				<iframe width="100%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
 					title="YouTube video player" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
-				</div>
+			</div>
 			<div class="box--sucursales">
 				<div class="caja">
 					<i class="fas fa-award"></i>
@@ -71,126 +80,126 @@
 					<h4>NEGOCIO RENTABLE</h4>
 				</div>
 			</div>
-		
+
 		</div>
 
-	
-	<section class="section">
-		<div class="accordion">
-			<div class="form__titulo">FRANQUICIADOS</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					DOMÉSTICO CORRIENTES
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-					
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					DOMÉSTICO ESCALADA
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-					--
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-				DOMÉSTICO FLORENCIO VARELA
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						<ul style="padding-left: 1rem;">
-							<li>Lista ordenada</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					DOMÉSTICO LANÚS
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						--
-					</div>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__item__header">
-					DOMÉSTICO ROSARIO
-				</div>
-				<div class="accordion__item__body">
-					<div class="accordion__item__body__content">
-						--
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
-	
-	<section class="contacto">
-		<div id="contacto-form">
-			<form class="form">
-				<div class="form__titulo">Formulario de contacto</div>
-				<input class="form__input" placeholder="Nombre y apellido" name="nombre" type="text">
-				<input class="form__input" placeholder="Dirección" name="direccion" type="text">
-				<input class="form__input" placeholder="Localidad" name="localidad" type="text">
-				<input class="form__input" placeholder="Provincia" name="provincia" type="text">
-				<input class="form__input" placeholder="Teléfono" name="telefono" type="number">
-				<input class="form__input" placeholder="Email" name="email" type="email"><br>
-				<label for="motivodeconsulta">Motivo de consulta</label>
-				<select class="form__select" name="motivodeconsulta" id="consulta">
-					<option value="Revendedor">Quiero ser Revendedor</option>
-					<option value="franquicia">Quiero ser franquiciado</option>
-					<option value="otra">Otra consulta</option>
-				</select>
-				<textarea class="form__input" placeholder="Consulta, comentario y/o sugerencia" name="comentario"
-					id=""></textarea>
-				<input class="bottom" type="reset" id="" value="BORRAR" />
-				<input class="bottom" type="submit" id="" value="ENVIAR" />
-			</form>
-		</div>
-		<div class="contacto--mapa">
-			<div class="form__titulo">Contacto y Ubicación</div>
-			
-			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
-				width="98%" height="25%" allowfullscreen="2" loading="lazy">
-			</iframe>
-			
-			<div class="box__mapa">
-				<i class="far fa-envelope"></i>
-				<h4>Mail</h4>
-				<p>Info@domestico.com.ar</p>
+		<section class="section">
+			<div class="accordion">
+				<div class="form__titulo">FRANQUICIADOS</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DOMÉSTICO CORRIENTES
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DOMÉSTICO ESCALADA
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							--
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DOMÉSTICO FLORENCIO VARELA
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							<ul style="padding-left: 1rem;">
+								<li>Lista ordenada</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DOMÉSTICO LANÚS
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							--
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						DOMÉSTICO ROSARIO
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							--
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="box__mapa">
-				<i class="fas fa-thumbtack"></i>
-				<h4>Dirección</h4>
-				<p>Av. Victorica 280
-					Moreno . Prov. de Buenos Aires
-					Argentina . CP 1744</p>
+		</section>
+
+
+		<section class="contacto">
+			<div id="contacto-form">
+				<form class="form">
+					<div class="form__titulo">Formulario de contacto</div>
+					<input class="form__input" placeholder="Nombre y apellido" name="nombre" type="text">
+					<input class="form__input" placeholder="Dirección" name="direccion" type="text">
+					<input class="form__input" placeholder="Localidad" name="localidad" type="text">
+					<input class="form__input" placeholder="Provincia" name="provincia" type="text">
+					<input class="form__input" placeholder="Teléfono" name="telefono" type="number">
+					<input class="form__input" placeholder="Email" name="email" type="email"><br>
+					<label for="motivodeconsulta">Motivo de consulta</label>
+					<select class="form__select" name="motivodeconsulta" id="consulta">
+						<option value="Revendedor">Quiero ser Revendedor</option>
+						<option value="franquicia">Quiero ser franquiciado</option>
+						<option value="otra">Otra consulta</option>
+					</select>
+					<textarea class="form__input" placeholder="Consulta, comentario y/o sugerencia" name="comentario"
+						id=""></textarea>
+					<input class="bottom" type="reset" id="" value="BORRAR" />
+					<input class="bottom" type="submit" id="" value="ENVIAR" />
+				</form>
 			</div>
-			<div class="box__mapa">
-				<i class="far fa-clock"></i>
-				<h4>Horario</h4>
-				<p>Lunes a Viernes<br>
-					8.30 a 13.00 hs. y 14.30  a 19.30 hs.
-					Sabados 8.30 a 18.00 hs.</p>
+			<div class="contacto--mapa">
+				<div class="form__titulo">Contacto y Ubicación</div>
+
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
+					width="98%" height="25%" allowfullscreen="2" loading="lazy">
+				</iframe>
+
+				<div class="box__mapa">
+					<i class="far fa-envelope"></i>
+					<h4>Mail</h4>
+					<p>Info@domestico.com.ar</p>
+				</div>
+				<div class="box__mapa">
+					<i class="fas fa-thumbtack"></i>
+					<h4>Dirección</h4>
+					<p>Av. Victorica 280
+						Moreno . Prov. de Buenos Aires
+						Argentina . CP 1744</p>
+				</div>
+				<div class="box__mapa">
+					<i class="far fa-clock"></i>
+					<h4>Horario</h4>
+					<p>Lunes a Viernes<br>
+						8.30 a 13.00 hs. y 14.30 a 19.30 hs.
+						Sabados 8.30 a 18.00 hs.</p>
+				</div>
+				<div class="box__mapa">
+					<i class="fas fa-phone"></i>
+					<h4>0237 4605778</h4>
+					<p>0237 4625721 . 011 22231625 <br> WhatsApp 011 64471234 </p>
+				</div>
 			</div>
-			<div class="box__mapa">
-				<i class="fas fa-phone"></i>
-				<h4>0237 4605778</h4>
-				<p>0237 4625721 . 011 22231625 <br> WhatsApp 011 64471234 </p>
-			</div>
-		</div>
-	</section>
-</main>
+		</section>
+	</main>
 	<footer class="footer">
 		<!--Inicio footer-->
 		<div id="promo">
@@ -218,33 +227,32 @@
 	</footer>
 
 
-<script>
-	function accion() {
-		console.log("está funcionando mi boton");
-		var ancla = document.getElementsByClassName("navMenu")
-		for (var i = 0; i < ancla.length; i++) {
-			ancla[i].classList.toggle("desaparece");
+	<script>
+		function accion() {
+			console.log("está funcionando mi boton");
+			var ancla = document.getElementsByClassName("navMenu")
+			for (var i = 0; i < ancla.length; i++) {
+				ancla[i].classList.toggle("desaparece");
+			}
 		}
-	}
-</script>
-<script>
-	const accordionItemHeaders = document.querySelectorAll(".accordion__item__header");
+	</script>
+	<script>
+		const accordionItemHeaders = document.querySelectorAll(".accordion__item__header");
 
-	accordionItemHeaders.forEach(accordionItemHeader => {
-		accordionItemHeader.addEventListener("click", event => {
+		accordionItemHeaders.forEach(accordionItemHeader => {
+			accordionItemHeader.addEventListener("click", event => {
 
-			accordionItemHeader.classList.toggle("active");
-			const accordionItemBody = accordionItemHeader.nextElementSibling;
-			if (accordionItemHeader.classList.contains("active")) {
-				accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
-			}
-			else {
-				accordionItemBody.style.maxHeight = 0;
-			}
+				accordionItemHeader.classList.toggle("active");
+				const accordionItemBody = accordionItemHeader.nextElementSibling;
+				if (accordionItemHeader.classList.contains("active")) {
+					accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
+				} else {
+					accordionItemBody.style.maxHeight = 0;
+				}
 
+			});
 		});
-	});
-</script>
+	</script>
 
 
 
