--- a/html/productos.html
+++ b/html/productos.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -57,56 +57,145 @@
 		<section class="section">
 
 			<div class="accordion">
-				<div class="form__titulo">Conoce nuestros productos</div>
+				<div class="form__titulo">CONOCE NUESTROS PRODUCTOS</div>
 				<div class="accordion__item">
 					<div class="accordion__item__header">
-						Productos a Granel
-					</div>
-					<div class="accordion__item__body">
-						<div class="accordion__item__body__content">
-							--
-						</div>
-					</div>
-				</div>
-				<div class="accordion__item">
-					<div class="accordion__item__header">
-						Acondicionamiento para ropa
-					</div>
-					<div class="accordion__item__body">
-						<div class="accordion__item__body__content">
-							--
-						</div>
-					</div>
-				</div>
-				<div class="accordion__item">
-					<div class="accordion__item__header">
-						Productos para Piscinas
+						PRODUCTOS A GRANEL Y PARA EL HOGAR
 					</div>
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
 							<ul style="padding-left: 1rem;">
-								<li>Lista ordenada</li>
+								<li>BAJADOR DE PH P/ PISCINAS (POLVO)</li>
+								<li>CERAS PARA PISOS</li>
+								<li>CLORO LIQUIDO</li>
+								<li>CLORO SOLIDO</li>
+								<li>CURADOR PARA PISOS NUEVOS</li>
+								<li>DESENGRASANTES</li>
+								<li>DESOD. P/ PISOS – CRISTALINO</li>
+								<li>DESOD. P/ PISOS – LECHOSOS</li>
+								<li>DESTAPA CAÑERIAS</li>
+								<li>DETERGENTE MADRE - 30% MATERIA ACTIVA</li>
+								<li>DETERGENTES – 17% MATERIA ACTIVA</li>
+								<li>ENVASES</li>
+								JABON EN POLVO
+								JABON LÍQUIDO (CONCENTRADO)
+								LAVANDINA (CONCENTRADA)
+								LIMPIA VIDRIOS
+								LIMPIADOR MULTI (SANGRE Y ÓXIDO)
+								LIMPIADORES CREMOSOS
+								LINEA NARANJA
+								LIQUIDO PARA LAMPAZOS
+								PERFUMES PARA ROPA (CONC)
+								PERFUMINAS (CONC)
+								PRODUCTOS VARIOS
+								QUITA MANCHAS (CONCENTRADO)
+								QUITA SARRO / QUITA CERA
+								REFORZ. DE LAVADO EN POLVO / OXI (INDUSTRIAL)
+								SHAMPOO ROPA FINA (CONCENTRADO)
+								TRAPOS DE PISOS
+
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div class="accordion__item">
 					<div class="accordion__item__header">
-						Productos para autos
+						ACONDICIONAMIENTO PARA ROPA
 					</div>
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
-							--
+							<ul style="padding-left: 1rem;">
+								<li>JABON EN POLVO</li>
+								<li>JABON LÍQUIDO (ULTRA - TRADICIONAL - HIDROGEL)</li>
+								<li>LAVANDINA ROPA BLANCA</li>
+								<li>PERFUMES PARA ROPA A BASE DE ALCOHOL</li>
+								<li>PERFUMINAS BASE DE AGUA</li>
+								<li>QUITA MANCHAS</li>
+								<li>LAVANDINA ROPA COLOR</li>
+								<li>SHAMPOO ROPA FINA</li>
+								<li>SUAVIZANTE P/ ROPA (VIOLETA ECO - CELESTE DOBLE - BLANCO TRIPLE)</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 				<div class="accordion__item">
 					<div class="accordion__item__header">
-						Perfumería y aromatización
+						PRODUCTOS PARA PISCINAS
 					</div>
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
-							--
+							<ul style="padding-left: 1rem;">
+								<li>ALGUICIDA (CONCENTRADO)</li>
+								<li>AUYENTA BICHOS P/ PISCINAS (GRANULADO)</li>
+								<li>BAJADOR DE PH P/ PISCINAS (POLVO)</li>
+								<li>BOYAS DOSIFICADORAS</li>
+								<li>CLORO LIQUIDO</li>
+								<li>CLORO SOLIDO</li>
+								<li>CONTROL DE PLAGAS</li>
+								<li>DESINCRUSTANTE</li>
+								<li>LIMPIAFONDOS</li>
+								<li>MANGUERAS</li>
+								<li>PRECIPITANTE</li>
+								<li>REPUESTOS DE CABOS Y MANGOS</li>
+								<li>SACAHOJAS</li>
+								<li>SULFATOS</li>
+								<li>TEST KIT</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						PRODUCTOS PARA AUTOS
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							<ul style="padding-left: 1rem;">
+								<li>CERA PARA AUTO</li>
+								<li>ESPONJA PARA AUTO</li>
+								<li>LIMPIA TAPIZADOS</li>
+								<li>DESENGRASANTES</li>
+								<li>QUITA MANCHAS (CONCENTRADO)</li>
+								<li>REVIVIDOR PARA INTERIOR</li>
+								<li>SHAMPOO PARA AUTO</li>
+								<li>SILICONA PARA EXTERIOR EXTRA BRILLO</li>
+								<li>CEPILLOS</li>
+								<li>REJILLAS</li>
+								<li>PAÑOS DE MICROFIBRA</li>
+								<li>FRANELAS</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						PERFUMERIA Y AROMATIZACIÓN
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							<ul style="padding-left: 1rem;">
+								<li>AEROSOLES AEROSOFT (AROMAS A ELIGIR)</li>
+								<li>DIFUSORES CON VARILLAS (VARIAS FRAGANCIAS)</li>
+								<li>DISPENSER SENSOR LUZ Y TOQUE (BLACK - WHITE)</li>
+								<li>GLADE AEROSOL</li>
+								<li>LYSOFORM EN AEROSOL</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="accordion__item">
+					<div class="accordion__item__header">
+						PRODUCTOS PARA HOGAR
+					</div>
+					<div class="accordion__item__body">
+						<div class="accordion__item__body__content">
+							<ul style="padding-left: 1rem;">
+								<li>AEROSOLES AEROSOFT (AROMAS A ELIGIR)</li>
+								<li>DIFUSORES CON VARILLAS (VARIAS FRAGANCIAS)</li>
+								<li>DISPENSER SENSOR LUZ Y TOQUE (BLACK - WHITE)</li>
+								<li>GLADE AEROSOL</li>
+								<li>LYSOFORM EN AEROSOL</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -215,15 +304,24 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-			<div class="promo__contacto">
-				<h2>CONVERSA CON UN ASESOR!</h2>
-				<a href="#"><i class="fab fa-whatsapp"></i></a>
+			<div class="promo__redes">
+				<a href="#"><i class="fab fa-facebook-square"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
+
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
 		</div>
 	</footer>
+
+	<div class="whatsapp">
+		<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
+			target="_blank">
+			<i class="fab fa-whatsapp"></i></a>
+		</a>
+	</div>
 
 
 	<script>
