--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -43,11 +42,12 @@
 		<div class="content--sucursales">
 			
 			
-			<div class="sucursales__titulo"><svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			<div class="sucursales__titulo">
+				<svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				<circle id="Oval" cx="512" cy="512" r="512"></circle>
 				<circle id="Oval" cx="512" cy="512" r="512"></circle>
 				<circle id="Oval" cx="512" cy="512" r="512"></circle>
-		</svg>¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
+				</svg>¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
 			<div class="video">
 				<iframe width="100%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
 					title="YouTube video player" frameborder="0"
@@ -76,7 +76,7 @@
 					<h4>ASESORAMIENTO TOTAL</h4>
 				</div>
 				<div class="caja">
-					<i class="fas fa-globe"></i>
+					<i class="fas fa-chart-line"></i>
 					<h4>NEGOCIO RENTABLE</h4>
 				</div>
 			</div>
@@ -209,22 +209,26 @@
 			<div class="promo__text">
 				<p>Doméstico, es un negocio de venta de productos de limpieza sueltos de uso domestico e industrial,
 					que se
-					destaca por su variedad, calidad y precios bajos.</p>
+					destaca por su variedad, calidad y precios bajos. <br>La tarea de una fábrica no concluye en la entrega de los productos. Actualmente es necesario brindar un verdadero respaldo postventa que ayude a una correcta selección y utilización de los productos. </p>
 			</div>
 			<div class="promo__redes">
 				<a href="#"><i class="fab fa-facebook-square"></i></a>
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-			<div class="promo__contacto">
-				<h2>CONVERSA CON UN ASESOR!</h2>
-				<a href="#"><i class="fab fa-whatsapp"></i></a>
-			</div>
+
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
 		</div>
 	</footer>
+
+	<div class="whatsapp">
+		<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
+			target="_blank">
+			<i class="fab fa-whatsapp"></i></a>
+		</a>
+	</div>
 
 
 	<script>
