--- a/index.html
+++ b/index.html
@@ -214,19 +214,19 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-			<div class="promo__contacto">
-				<h2>CONVERSA CON UN ASESOR!</h2>
-
-				<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
-                    class="float" target="_blank">
-                    <i class="fab fa-whatsapp"></i></a>
-                </a>
-			</div>
+		
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
 		</div>
 	</footer>
+
+	<div class="whatsapp">
+		<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
+			 target="_blank">
+			<i class="fab fa-whatsapp"></i></a>
+		</a>
+	</div>
 
 	<!--Fin footer-->
 		<script>
