--- a/html/servicios.html
+++ b/html/servicios.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -231,15 +230,19 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-			<div class="promo__contacto">
-				<h2>CONVERSA CON UN ASESOR!</h2>
-				<a href="#"><i class="fab fa-whatsapp"></i></a>
-			</div>
+
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
 		</div>
 	</footer>
+
+	<div class="whatsapp">
+		<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
+			target="_blank">
+			<i class="fab fa-whatsapp"></i></a>
+		</a>
+	</div>
 
 
 	<script>
