--- a/html/productos.html
+++ b/html/productos.html
@@ -201,36 +201,23 @@
 				</div>
 			</div>
 		</section>
-		<article class="article">
-			<div class="form__titulo">¿Por qué ser parte de Doméstico?</div><br>
-			<div class="box__video">
-				<i class="fas fa-award"></i>
-				<h4>Calidad</h4>
-				<p>Todos nuestros productos son fabricados bajo los más altos estándares de calidad.</p>
+		<section class="container">
+			<div class="galeria">
+				<div class="galeria-item tall" style="background-image: url('../img/galeria/1.jpg')"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/2.jpg');"></div>
+				<div class="galeria-item wide" style="background-image: url('../img/galeria/3.jpg');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/4.jpg');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/5.jpg');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/6.png');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/7.png');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/8.png')"></div>
+				<div class="galeria-item tall wide" style="background-image: url('../img/galeria/9.jpg');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/2.jpg');"></div>
+				<div class="galeria-item" style="background-image: url('../img/galeria/2.jpg');"></div>
+				
+		
 			</div>
-			<div class="box__video">
-				<i class="fas fa-piggy-bank"></i>
-				<h4>Economía</h4>
-				<p>Comprando en Doméstico, obtendrás un ahorro superior del 60%, bien sea como inversión, institución o
-					para tu hogar.</p>
-			</div>
-			<div class="box__video">
-				<i class="far fa-check-square"></i>
-				<h4>Experiencia</h4>
-				<p>Más de 20 años de experiencia en la fabricación de insumos para limpieza e higiene.</h6>
-			</div>
-			<div class="box__video">
-				<i class="fas fa-globe"></i>
-				<h4>Negocio Esencial</h4>
-				<p>Negocio de primera necesidad, nunca se detiene.</p>
-			</div>
-		</article>
-		<article class="article2">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqeYv7RITII"
-				title="YouTube video player" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</article>
+		</section>
 		<section class="contacto">
 			<div id="contacto-form">
 				<form class="form">
@@ -304,12 +291,6 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-			<div class="promo__redes">
-				<a href="#"><i class="fab fa-facebook-square"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-youtube"></i></a>
-			</div>
-
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
