--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Doméstico, Fabricante de Productos de Limpieza</title>
-	<meta name="description" content="Fabricante de productos de limpieza. Desde hace más de 18 años generando soluciones en limpieza integral.">
+	<meta name="description"
+		content="Fabricante de productos de limpieza. Desde hace más de 18 años generando soluciones en limpieza integral.">
 	<meta name="keywords" content="quimica, detergente, suavizante, alcohol, fabrica de productos de limpieza">
 	<link rel="shortcut icon" href="img/favicon.ico" />
 	<link rel="stylesheet" href="scss/estilos.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
-<body>	
+<body>
 
-	<header class="header"  data-spy="affix" data-offset-top="70">
+	<header class="header" data-spy="affix" data-offset-top="70">
 
-		<nav class="menu"  >
+		<nav class="menu">
 			<a href="index.html"> <img class="logo" src="img/logo.png"> </a>
 			<button class="menu-boton" onclick="accion()">
 				<i class="fas fa-bars"></i>
 			</button>
-			<ul class="navMenu desaparece" >
+			<ul class="navMenu desaparece">
 				<li><a href="index.html" class="current">Doméstico</a></li>
 				<li><a href="html/productos.html">Productos</a></li>
 				<li><a href="html/servicios.html">Servicios</a></li>
@@ -140,7 +141,7 @@
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</article>
-		 <section class="contacto">
+		<section class="contacto">
 			<div id="contacto-form">
 				<form class="form">
 					<div class="form__titulo">Formulario de contacto</div>
@@ -164,12 +165,12 @@
 			</div>
 			<div class="contacto--mapa">
 				<div class="form__titulo">Contacto y Ubicación</div>
-				
+
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
 					width="98%" height="25%" allowfullscreen="2" loading="lazy">
 				</iframe>
-				
+
 				<div class="box__mapa">
 					<i class="far fa-envelope"></i>
 					<h4>Mail</h4>
@@ -186,7 +187,7 @@
 					<i class="far fa-clock"></i>
 					<h4>Horario</h4>
 					<p>Lunes a Viernes<br>
-						8.30 a 13.00 hs. y 14.30  a 19.30 hs.
+						8.30 a 13.00 hs. y 14.30 a 19.30 hs.
 						Sabados 8.30 a 18.00 hs.</p>
 				</div>
 				<div class="box__mapa">
@@ -195,9 +196,9 @@
 					<p>0237 4625721 . 011 22231625 <br> WhatsApp 011 64471234 </p>
 				</div>
 			</div>
-		</section> 
+		</section>
 	</main>
-	
+
 	<footer class="footer">
 		<!--Inicio footer-->
 		<div id="promo">
@@ -214,7 +215,7 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-		
+
 		</div>
 		<div class="footer1">
 			<p>&copy; Doméstico Central | 2021</p>
@@ -223,38 +224,40 @@
 
 	<div class="whatsapp">
 		<a href="https://api.whatsapp.com/send?phone=5491164471234&text=Mandame un mensaje para cualquier consulta"
-			 target="_blank">
+			target="_blank">
 			<i class="fab fa-whatsapp"></i></a>
 		</a>
 	</div>
 
 	<!--Fin footer-->
-		<script>
-			var slideIndex = 0;
-			showSlides();
+	<script>
+		var slideIndex = 0;
+		showSlides();
 
-			function showSlides() {
-				var i;
-				var slides = document.getElementsByClassName("slides");
-				for (i = 0; i < slides.length; i++) {
-					slides[i].style.display = "none";
-				}
-				slideIndex++;
-				if (slideIndex > slides.length) { slideIndex = 1 }
-				slides[slideIndex - 1].style.display = "block";
-				setTimeout(showSlides, 4000);
+		function showSlides() {
+			var i;
+			var slides = document.getElementsByClassName("slides");
+			for (i = 0; i < slides.length; i++) {
+				slides[i].style.display = "none";
 			}
-		</script>
+			slideIndex++;
+			if (slideIndex > slides.length) {
+				slideIndex = 1
+			}
+			slides[slideIndex - 1].style.display = "block";
+			setTimeout(showSlides, 4000);
+		}
+	</script>
 
-		<script>
-			function accion() {
-				console.log("está funcionando mi boton");
-				var ancla = document.getElementsByClassName("navMenu")
-				for (var i = 0; i < ancla.length; i++) {
-					ancla[i].classList.toggle("desaparece");
-				}
+	<script>
+		function accion() {
+			console.log("está funcionando mi boton");
+			var ancla = document.getElementsByClassName("navMenu")
+			for (var i = 0; i < ancla.length; i++) {
+				ancla[i].classList.toggle("desaparece");
 			}
-		</script>
+		}
+	</script>
 </body>
 
 </html>
