--- a/html/productos.html
+++ b/html/productos.html
@@ -77,22 +77,21 @@
 								<li>DETERGENTE MADRE - 30% MATERIA ACTIVA</li>
 								<li>DETERGENTES – 17% MATERIA ACTIVA</li>
 								<li>ENVASES</li>
-								JABON EN POLVO
-								JABON LÍQUIDO (CONCENTRADO)
-								LAVANDINA (CONCENTRADA)
-								LIMPIA VIDRIOS
-								LIMPIADOR MULTI (SANGRE Y ÓXIDO)
-								LIMPIADORES CREMOSOS
-								LINEA NARANJA
-								LIQUIDO PARA LAMPAZOS
-								PERFUMES PARA ROPA (CONC)
-								PERFUMINAS (CONC)
-								PRODUCTOS VARIOS
-								QUITA MANCHAS (CONCENTRADO)
-								QUITA SARRO / QUITA CERA
-								REFORZ. DE LAVADO EN POLVO / OXI (INDUSTRIAL)
-								SHAMPOO ROPA FINA (CONCENTRADO)
-								TRAPOS DE PISOS
+								<li>JABON EN POLVO</li>
+								<li>JABON LÍQUIDO (CONCENTRADO)</li>
+								<li>LAVANDINA (CONCENTRADA)</li>
+								<li>LIMPIA VIDRIOS</li>
+								<li>LIMPIADOR MULTI (SANGRE Y ÓXIDO)</li>
+								<li>LIMPIADORES CREMOSOS</li>
+								<li>LINEA NARANJA</li>
+								<li>LIQUIDO PARA LAMPAZOS</li>
+								<li>PERFUMES PARA ROPA (CONC)</li>
+								<li>PERFUMINAS (CONC)</li>
+								<li>PRODUCTOS VARIOS</li>
+								<li>QUITA MANCHAS</li>
+								<li>QUITA SARRO / QUITA CERA</li>
+								<li>SHAMPOO ROPA FINA (CONCENTRADO)</li>
+								<li>TRAPOS DE PISOS</li>
 
 							</ul>
 						</div>
@@ -190,11 +189,33 @@
 					<div class="accordion__item__body">
 						<div class="accordion__item__body__content">
 							<ul style="padding-left: 1rem;">
-								<li>AEROSOLES AEROSOFT (AROMAS A ELIGIR)</li>
-								<li>DIFUSORES CON VARILLAS (VARIAS FRAGANCIAS)</li>
-								<li>DISPENSER SENSOR LUZ Y TOQUE (BLACK - WHITE)</li>
-								<li>GLADE AEROSOL</li>
-								<li>LYSOFORM EN AEROSOL</li>
+								<li>BAJADOR DE PH P/ PISCINAS (POLVO)</li>
+								<li>CERAS PARA PISOS</li>
+								<li>CLORO LIQUIDO</li>
+								<li>CLORO SOLIDO</li>
+								<li>CURADOR PARA PISOS NUEVOS</li>
+								<li>DESENGRASANTES</li>
+								<li>DESOD. P/ PISOS – CRISTALINOS</li>
+								<li>DESOD. P/ PISOS – LECHOSOS</li>
+								<li>DESTAPA CAÑERIAS</li>
+								<li>DETERGENTE MADRE - 30% MATERIA ACTIVA</li>
+								<li>DETERGENTES – 17% MATERIA ACTIVA</li>
+								<li>TRAPOS DE PISOS, REJILLAS, ESPONJAS</li>
+								<li>JABON EN POLVO</li>
+								<li>JABON LÍQUIDO (CONCENTRADO)</li>
+								<li>LAVANDINA (CONCENTRADA)</li>
+								<li>LIMPIA VIDRIOS</li>
+								<li>DESMANCHADOR (SANGRE Y ÓXIDO)</li>
+								<li>LIMPIADOR CREMOSO</li>
+								<li>LINEA NARANJA</li>
+								<li>LIQUIDO PARA LAMPAZOS</li>
+								<li>PERFUMES PARA ROPA - BASE ALCOHOL</li>
+								<li>PERFUMINAS - BASE AGUA</li>
+								<li>BALDES, CANASTOS, CESTOS</li>
+								<li>QUITA MANCHAS</li>
+								<li>QUITA SARRO / QUITA CERA</li>
+								<li>SHAMPOO ROPA FINA (CONCENTRADO)</li>
+								<li>Y MUCHO MÁS...</li>
 							</ul>
 						</div>
 					</div>
