--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -207,9 +207,7 @@
 				<img src="../img/logo.jpg" />
 			</div>
 			<div class="promo__text">
-				<p>Doméstico, es un negocio de venta de productos de limpieza sueltos de uso domestico e industrial,
-					que se
-					destaca por su variedad, calidad y precios bajos. <br>La tarea de una fábrica no concluye en la entrega de los productos. Actualmente es necesario brindar un verdadero respaldo postventa que ayude a una correcta selección y utilización de los productos. </p>
+				<p>La tarea de una fábrica no concluye en la entrega de los productos. Actualmente es necesario brindar un verdadero respaldo postventa que ayude a una correcta selección y utilización de los productos. </p>
 			</div>
 			<div class="promo__redes">
 				<a href="#"><i class="fab fa-facebook-square"></i></a>
