--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -40,13 +40,14 @@
 
 	<main class="contenedor">
 		<div class="content--sucursales">
-			
-			
+
+
 			<div class="sucursales__titulo">
-				<svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-				<circle id="Oval" cx="512" cy="512" r="512"></circle>
-				<circle id="Oval" cx="512" cy="512" r="512"></circle>
-				<circle id="Oval" cx="512" cy="512" r="512"></circle>
+				<svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink">
+					<circle id="Oval" cx="512" cy="512" r="512"></circle>
+					<circle id="Oval" cx="512" cy="512" r="512"></circle>
+					<circle id="Oval" cx="512" cy="512" r="512"></circle>
 				</svg>¡UNIENDOTE A NUESTRA RED DE FRANQUICIAS OBTIENES!</div>
 			<div class="video">
 				<iframe width="100%" height="70%" src="https://www.youtube.com/embed/OqeYv7RITII"
@@ -141,12 +142,10 @@
 				</div>
 			</div>
 		</section>
-
-
 		<section class="contacto">
 			<div id="contacto-form">
+				<div class="form__titulo">Pedinos tu Cotización o envianos tu consulta</div>
 				<form class="form">
-					<div class="form__titulo">Formulario de contacto</div>
 					<input class="form__input" placeholder="Nombre y apellido" name="nombre" type="text">
 					<input class="form__input" placeholder="Dirección" name="direccion" type="text">
 					<input class="form__input" placeholder="Localidad" name="localidad" type="text">
@@ -167,12 +166,12 @@
 			</div>
 			<div class="contacto--mapa">
 				<div class="form__titulo">Contacto y Ubicación</div>
-
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
-					width="98%" height="25%" allowfullscreen="2" loading="lazy">
-				</iframe>
-
+				<div class="box__mapa">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3710318768067!2d-58.798130685051014!3d-34.6453315672076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9445489bf05f%3A0x1549b872936db9af!2sDom%C3%A9stico%20Moreno%2C%20Qu%C3%ADmica%20de%20Limpieza!5e0!3m2!1ses!2sar!4v1626236987234!5m2!1ses!2sar"
+						width="100%" height="100%" allowfullscreen="2" loading="lazy">
+					</iframe>
+				</div>
 				<div class="box__mapa">
 					<i class="far fa-envelope"></i>
 					<h4>Mail</h4>
@@ -207,7 +206,9 @@
 				<img src="../img/logo.jpg" />
 			</div>
 			<div class="promo__text">
-				<p>La tarea de una fábrica no concluye en la entrega de los productos. Actualmente es necesario brindar un verdadero respaldo postventa que ayude a una correcta selección y utilización de los productos. </p>
+				<p>La tarea de una fábrica no concluye en la entrega de los productos. Actualmente es necesario brindar
+					un verdadero respaldo postventa que ayude a una correcta selección y utilización de los productos.
+				</p>
 			</div>
 			<div class="promo__redes">
 				<a href="#"><i class="fab fa-facebook-square"></i></a>
