actualizacion de margenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
-		<a class="linkCompra" href="#" target="">comprá y vendé doméstico</a>
+		<a class="linkCompra" href="#contacto-form" target="">comprá y vendé doméstico</a>
 	</header>
 
 	<main class="contenedor">
@@ -60,14 +60,14 @@
 						<div class="text">ENVÍOS A TODO EL PAIS!! <h4>Distribuimos por Mayor y Menor.</h4>
 						</div>
 					</div>
-					<img src="img/slide/3.jpg" style="width:50%">
+					<img src="img/slide/3.jpg" style="width:55%">
 				</div>
 				<div class="slides fades">
 					<div class="name">
 						<div class="text">FABRICACIÓN A MEDIDA <h4>Con el mejor estándar de calidad.</h4>
 						</div>
 					</div>
-					<img src="img/slide/4.jpg" style="width:50%">
+					<img src="img/slide/4.jpg" style="width:100%">
 				</div>
 			</div>
 		</section>
