--- a/html/franquicias.html
+++ b/html/franquicias.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title>Franquiciados - Doméstico</title>
 	<meta name="description" content="Sumate a la red de franquiciados de la cadena Doméstico">
 	<meta name="keywords" content="quimica, detergente, suavizante, alcohol, fabrica de productos de limpieza">
